--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,10 @@ edition = "2018"
 env_logger = "0.8.1"
 inotify = { version = "0.8.3", default-features = false }
 log = "0.4.11"
+tide = "0.15.0"
+async-std = { version = "1.7.0", features = ["attributes"] }
+blocking = "1.0.2"
+md5 = "0.7.0"
+
+[dev-dependencies]
+tempfile = "3.1.0"
