--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,15 @@ edition = "2018"
 
 [dependencies]
 env_logger = "0.8.1"
-inotify = { version = "0.8.3", default-features = false }
 log = "0.4.11"
 tide = "0.15.0"
 async-std = { version = "1.7.0", features = ["attributes"] }
 blocking = "1.0.2"
 md5 = "0.7.0"
 
+[target.'cfg(target_os = "linux")'.dependencies]
+inotify = { version = "0.8.3", default-features = false }
+
 [dev-dependencies]
 tempfile = "3.1.0"
+tide-testing = "0.1.2"
