feat: Add a post for a platform-agnostic log_collector
This has ended up one of the more comprehensive posts, going into quite
some granularity over the implementation. The resulting post is very
long, but quite accurately captures the iterations that went into
developing it.

In terms of the implementation – a `log_collector::watcher` module has
been introduced which defines a platform-agnostic file watching API.
Conditional compilation is used to fill in appropriate implementation
details for each platform.

Some tests have been added to `log_collector`, and in the process of
writing them some interesting edge cases have cropped up, which could
serve as interesting content for a future post.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,12 @@ md5 = "0.7.0"
 [target.'cfg(target_os = "linux")'.dependencies]
 inotify = { version = "0.8.3", default-features = false }
 
+[target.'cfg(target_os = "macos")'.dependencies]
+kqueue = "1.0.2"
+
 [dev-dependencies]
 tempfile = "3.1.0"
 tide-testing = "0.1.2"
+
+[patch.crates-io]
+kqueue-sys = { git = "https://gitlab.com/connec/rust-kqueue-sys.git", rev = "263f56cfb022b69643c9307095db1fde910822df" }
