--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tide = "0.15.0"
 async-std = { version = "1.7.0", features = ["attributes"] }
 blocking = "1.0.2"
 md5 = "0.7.0"
+serde_json = "1.0.61"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 inotify = { version = "0.8.3", default-features = false }
