--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ async-std = { version = "1.7.0", features = ["attributes"] }
 blocking = "1.0.2"
 md5 = "0.7.0"
 serde_json = "1.0.61"
+structopt = "0.3.21"
+clap = "2.33.3"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 inotify = { version = "0.8.3", default-features = false }
