--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,8 @@ md5 = "0.7.0"
 serde_json = "1.0.61"
 structopt = "0.3.21"
 clap = "2.33.3"
-kube = { version = "0.48.0", default-features = false, features = ["rustls-tls"] }
-kube-runtime = { version = "0.48.0", default-features = false, features = ["rustls-tls"] }
+kube = "0.48.0"
+kube-runtime = "0.48.0"
 k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
 tokio = { version = "1.1.1", features = ["rt"] }
 
