feat: Add a post discussing next steps for log collection
This is mostly expanding on various GitHub issues created to capture
some of the outstanding work to 'productionise' log collection. After
covering them all, we arrive at the conclusion that adding persistence
to what we have is enough to put a pin in log collection for now, and
start looking at metric collection!

Fixes #12.

--- a/deployment/kubernetes.yaml
+++ b/deployment/kubernetes.yaml
@@ -29,6 +29,18 @@ roleRef:
   name: monitoring-rs
   apiGroup: rbac.authorization.k8s.io
 ---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: monitoring-rs-data
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+  storageClassName: do-block-storage
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -50,6 +62,9 @@ spec:
       - name: monitoring-rs
         image: $DOCKER_DIGEST
         volumeMounts:
+        - name: data
+          mountPath: /.data
+          subPath: .data
         - name: varlog
           mountPath: /var/log
           readOnly: true
@@ -57,6 +72,9 @@ spec:
           mountPath: /var/lib/docker/containers
           readOnly: true
       volumes:
+      - name: data
+        persistentVolumeClaim:
+          claimName: monitoring-rs-data
       - name: varlog
         hostPath:
           path: /var/log
